--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <title>Disha Dehuroad</title>
+  <title>Disha Dehugaon</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   .show {
