--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <h3 class="text-base text-center font-semibold text-gray-900" id="modal-title">Scan the QR Code and Pay
                   the Fee</h3>
                 <div class="mt-2">
-                  <img src="./QR.jpg" alt="QR Code">
+                  <img src="QRCOde.jpg" alt="QR Code">
                 </div>
               </div>
             </div>
